--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <meta name="categories" content="website">
     <meta name="language" content="id-ID">
     <meta name="author" content="MBO99">
-    <meta property="fb:app_id" content="https://slot5000.tomahawkchurch.org/">
+    <meta property="fb:app_id" content="https://slot.fedea.com.ar/">
     <meta property="og:locale" content="id_ID">
     <meta property="og:title" content="Situs MPO Slot5000 Bonus New Member 100 TO 7x di Awal">
     <meta property="og:type" content="website">
     <meta property="og:description" content="MBO99 memberikan bocoran MPO Slot5000 paling gacor di Indonesia yang memberikan dukungan slot bonus new member 100 di awal to kecil mulai dari 7x 8x 10x 18x.">
     <meta property="og:image" content="https://res.cloudinary.com/mbo99/image/upload/v1668410068/slot5000_wcush7.jpg">
-    <meta property="og:url" content="https://slot5000.tomahawkchurch.org/">
+    <meta property="og:url" content="https://slot.fedea.com.ar/">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="https://slot5000.tomahawkchurch.org/">
+    <meta name="twitter:site" content="https://slot.fedea.com.ar/">
     <meta name="twitter:title" content="Situs MPO Slot5000 Bonus New Member 100 TO 7x di Awal">
     <meta name="twitter:description" content="MBO99 memberikan bocoran MPO Slot5000 paling gacor di Indonesia yang memberikan dukungan slot bonus new member 100 di awal to kecil mulai dari 7x 8x 10x 18x.">
     <meta name="twitter:image" content="https://res.cloudinary.com/mbo99/image/upload/v1668410068/slot5000_wcush7.jpg">
-    <link rel="canonical" href="https://slot5000.tomahawkchurch.org/">
+    <link rel="canonical" href="https://slot.fedea.com.ar/">
     <link rel='dns-prefetch' href="https://res.cloudinary.com/mbo99/image/upload/v1668410068/slot5000_wcush7.jpg">
     <link rel="preload" as="image" href="https://res.cloudinary.com/mbo99/image/upload/v1668410068/slot5000_wcush7.jpg">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
@@ -39,7 +39,7 @@
   </head>
   <body class="dark-scheme">
     <header style="text-align: center;">
-      <a href="https://slot5000.tomahawkchurch.org/" target="_blank" rel="noreferrer follow"><amp-img src="https://res.cloudinary.com/mbo99/image/upload/v1652234321/Logo_MBO99_xf1frd.gif" alt="Logo MBO99" width="200" height="115" layout="fixed"></amp-img></a>
+      <a href="https://slot.fedea.com.ar/" target="_blank" rel="noreferrer follow"><amp-img src="https://res.cloudinary.com/mbo99/image/upload/v1652234321/Logo_MBO99_xf1frd.gif" alt="Logo MBO99" width="200" height="115" layout="fixed"></amp-img></a>
     </header>
     <main class="page-content">
       <div style="margin-top:25px;">
@@ -72,7 +72,7 @@
             </div>
           </div>
           <br>
-<p>Pilihan untuk memainkan game <a href="https://slot5000.tomahawkchurch.org/">Slot5000</a> gacor hari ini merupakan satu pilihan tepat untuk anda mainkan dalam situs slot5 yang punya beragam layanan termasuk slot5000 via dana. Pilihan game yang menarik dan bernilai rtp tinggi dapat mengantarkan anda memperoleh keuntungan lebih mudah di dalam agen MBO99 online berbeda dengan agen lain. Peluang menang dalam agen MBO99 online lebih besar untuk dapat anda manfaatkan menggunakan fasilitas transaksi deposit dana. Kesempatan bermain slot yang bisa berjalan menguntungkan dalam agen MBO99 online bisa anda manfaatkan untuk mendukung tahapan bermain menjadi lebih mudah dengan fasilitas lengkapnya.</p>
+<p>Pilihan untuk memainkan game <a href="https://slot.fedea.com.ar/">Slot5000</a> gacor hari ini merupakan satu pilihan tepat untuk anda mainkan dalam situs slot5 yang punya beragam layanan termasuk slot5000 via dana. Pilihan game yang menarik dan bernilai rtp tinggi dapat mengantarkan anda memperoleh keuntungan lebih mudah di dalam agen MBO99 online berbeda dengan agen lain. Peluang menang dalam agen MBO99 online lebih besar untuk dapat anda manfaatkan menggunakan fasilitas transaksi deposit dana. Kesempatan bermain slot yang bisa berjalan menguntungkan dalam agen MBO99 online bisa anda manfaatkan untuk mendukung tahapan bermain menjadi lebih mudah dengan fasilitas lengkapnya.</p>
 <p>Anda dapat yakni bermain dalam agen MBO99 online karena memang sudah terlisensi resmi oleh Philipine Amusement and Corporation Gaming atau PAGCOR sebagai lembaga resmi untuk game online. Dengan lisensi tersebut, kesempatan bermain slot gacor yang lebih menguntungkan, aman dan bisa anda jalani dengan mudah dalam dukungan fasilitas mumpuni. Anda dapat memperoleh beragam fasilitas menguntungkan dalam agen MBO99 online online termasuk aplikasi yang mudah dan bisa dimainkan kapan saja selama 24 jam nonstop.</p>
 <p>Dengan beragam keuntungan yang ada, anda juga akan dipandu secara langsung dalam agen kami lewat customer service yang bisa diakses kapan saja termasuk lewat whatsapp chat di sini. Segera daftar sekarang di agen kami untuk menikmati game slot menguntungkan dan terbaik dari provider berkualitas.</p>
 <h2 id="#" style="text-align: center;">Keuntungan Bermain di Situs MBO99</h2>
@@ -131,7 +131,7 @@
 
 
 <h2>Situs Slot5000</h2>
-<p>Bermain dalam situs yang terbaik memang menguntungkan namun tetap harus diperhatikan kredibilitas atau kondisi terpercayanya. Memilih bermain dalam situs mpo slot MBO99 bukan hanya terjamin berkualitas namun juga terpercaya serta punya layanan slot terbaik. Ada beberapa kondisi yang akan meyakinkan anda bahwa situs slot <a href="https://slot5000.tomahawkchurch.org/">slot5000 wap</a> kami kredibel seperti :</p>
+<p>Bermain dalam situs yang terbaik memang menguntungkan namun tetap harus diperhatikan kredibilitas atau kondisi terpercayanya. Memilih bermain dalam situs mpo slot MBO99 bukan hanya terjamin berkualitas namun juga terpercaya serta punya layanan slot terbaik. Ada beberapa kondisi yang akan meyakinkan anda bahwa situs slot <a href="https://slot.fedea.com.ar/">slot5000 wap</a> kami kredibel seperti :</p>
 <h3>1. Proses bermain yang terjamin lisensi</h3>
 <p>Alasan pertama mengapa menjalani aktivitas permainan slot5000 gacor online dalam situs mpo slot MBO99 lebih terjamin adalah karena lisensi. Sebagai penyedia slot, anda akan memperoleh lisensi resmi dari Philipine Amusement and Corporation Gaming atau PAGCOR di dalam situs mpo slot MBO99 sehingga proses permainan berjalan lancar.</p>
 <h3>2. Hanya ada game resmi dalam situs kami</h3>
@@ -141,7 +141,7 @@
 <ol>
 <li>Tahapan main fleksibel, pemain bisa menjalani game game slot kapan saja dan di mana saja asal ada device smartphone dan juga jaringan internet.</li>
 <li>Kesempatan main bebas dari nawala setelah slot5000 login bisa menjadikan anda tetap bisa main tanpa menggunakan link alternatif sekalipun.</li>
-<li>Tahapan main slot yang bisa dijalani kapan saja karena bisa berlangsung 24 jam nonstop sehingga lebih menguntungkan bagi para pemain bahkan pemula karena berpeluang memperoleh <a href="https://slot5000.tomahawkchurch.org/">slot bonus 100 to 7x</a>.</li>
+<li>Tahapan main slot yang bisa dijalani kapan saja karena bisa berlangsung 24 jam nonstop sehingga lebih menguntungkan bagi para pemain bahkan pemula karena berpeluang memperoleh <a href="https://slot.fedea.com.ar/">slot bonus 100 to 7x</a>.</li>
 </ol>
 <p>Satu hal lagi yang menjadikan anda pasti menjadikan situs mpo slot MBO99 terbaik selain sarana slot adalah adanya layanan bantuan yang dapat diakses 24 jam nonstop. Sama seperti withdraw dan deposit yang terbuka 24 jam nonstop, anda akan lebih mudah bermain slot dengan adanya layanan bantuan tersebut.&nbsp; Layanan bantuan berupa customer service di dalam situs slot MBO99 slot bisa dimanfaatkan menggunakan live chat maupun whatsapp chat di sini dan berbagai pilihan media sosial lainnya.</p>
 <h2>Transaksi Situs Slot5000 Online</h2>
@@ -233,7 +233,7 @@
           </div>
           <footer class="footer">
             <div class="decoration-light decoration-margins"></div>
-            <p class="center-text no-bottom">2022 &copy; <a href="https://slot5000.tomahawkchurch.org/" target="_blank" rel="noopener follow"> MBO99.</a> All Rights Reserved.</p>
+            <p class="center-text no-bottom">2022 &copy; <a href="https://slot.fedea.com.ar/" target="_blank" rel="noopener follow"> MBO99.</a> All Rights Reserved.</p>
           </footer>
     </main>
     <script type="application/ld+json">
@@ -278,7 +278,7 @@
           "description": "MBO99 memberikan bocoran MPO Slot5000 paling gacor di Indonesia yang memberikan dukungan slot bonus new member 100 di awal to kecil mulai dari 7x 8x 10x 18x.",
           "keywords": ["Rtp slot hari ini, rtp slot, bocoran rtp slot hari ini, rtp slot pragmatic, rtp slot live, rtp slot gacor hari ini, rtp slot gacor, slot online"],
           "image": "https://res.cloudinary.com/mbo99/image/upload/v1668410068/slot5000_wcush7.jpg",
-          "url": "https://slot5000.tomahawkchurch.org/",
+          "url": "https://slot.fedea.com.ar/",
           "publisher": {
             "@type": "Organization",
             "name": "MBO99"
@@ -301,10 +301,10 @@
           "description": "MBO99 memberikan bocoran MPO Slot5000 paling gacor di Indonesia yang memberikan dukungan slot bonus new member 100 di awal to kecil mulai dari 7x 8x 10x 18x.",
           "image": "https://res.cloudinary.com/mbo99/image/upload/v1668410068/slot5000_wcush7.jpg",
           "logo": "https://res.cloudinary.com/mbo99/image/upload/v1652234321/Logo_MBO99_xf1frd.gif",
-          "url": "https://slot5000.tomahawkchurch.org/",
+          "url": "https://slot.fedea.com.ar/",
           "priceRange": "IDR5000 - IDR10000",
           "telephone": "+6281362495431",
-          "sameAs": ["https://slot5000.tomahawkchurch.org/"],
+          "sameAs": ["https://slot.fedea.com.ar/"],
           "address": {
             "@type": "PostalAddress",
             "streetAddress": "Jakarta",
@@ -338,7 +338,7 @@
           "@context": "https://schema.org",
           "@type": "Website",
           "name": "MBO99",
-          "url": "https://slot5000.tomahawkchurch.org/",
+          "url": "https://slot.fedea.com.ar/",
           "potentialAction": {
             "@type": "SearchAction",
             "target": {
@@ -356,7 +356,7 @@
           "@type": "NewsArticle",
           "mainEntityOfPage": {
             "@type": "WebPage",
-            "@id": "https://slot5000.tomahawkchurch.org/"
+            "@id": "https://slot.fedea.com.ar/"
           },
           "headline": "Situs MPO Slot5000 Bonus New Member 100 TO 7x di Awal",
           "description": "MBO99 memberikan bocoran MPO Slot5000 paling gacor di Indonesia yang memberikan dukungan slot bonus new member 100 di awal to kecil mulai dari 7x 8x 10x 18x.",
@@ -371,14 +371,14 @@
             "name": "MBO99",
             "logo": {
               "@type": "ImageObject",
-              "url": "https://slot5000.tomahawkchurch.org/"
+              "url": "https://slot.fedea.com.ar/"
             }
           },
           "datePublished": "2020-01-01",
           "dateModified": "2022-03-21"
         }
       </script>
-      <script type="application/ld+json" /> { "@context": "https://schema.org/", "@type": "BreadcrumbList", "itemListElement": [{ "@type": "ListItem", "position": 1, "name": "Home", "item": "https://slot5000.tomahawkchurch.org/" },{ "@type": "ListItem", "position": 2, "name": "Slot Gacor", "item": "https://slot5000.tomahawkchurch.org/" },{ "@type": "ListItem", "position": 3, "name": "SbobetOnline", "item": "https://slot5000.tomahawkchurch.org/" },{ "@type": "ListItem", "position": 4, "name": "Casino Online", "item": "https://slot5000.tomahawkchurch.org/" },{ "@type": "ListItem", "position": 5, "name": "Togel Online", "item": "https://slot5000.tomahawkchurch.org/" },{ "@type": "ListItem", "position": 6, "name": "Daftar Akun MPO MBO99", "item": "https://direct.lc.chat/10239962/" },{ "@type": "ListItem", "position": 7, "name": "Login Akun MPO MBO99", "item": "https://direct.lc.chat/10239962/" },{ "@type": "ListItem", "position": 8, "name": "Live Chat MBO99", "item": "https://secure.livechatinc.com/customer/action/open_chat?license_id=10820522" },{ "@type": "ListItem", "position": 9, "name": "MBO99 News", "item": "https://slot5000.tomahawkchurch.org/" },{ "@type": "ListItem", "position": 10, "name": "Versi Desktop", "item": "https://54.255.12.26" },{ "@type": "ListItem", "position": 11, "name": "Download APK", "item": "https://54.255.12.26/APK/MBO99-V2.0.apk" }] } </script>
+      <script type="application/ld+json" /> { "@context": "https://schema.org/", "@type": "BreadcrumbList", "itemListElement": [{ "@type": "ListItem", "position": 1, "name": "Home", "item": "https://slot.fedea.com.ar/" },{ "@type": "ListItem", "position": 2, "name": "Slot Gacor", "item": "https://slot.fedea.com.ar/" },{ "@type": "ListItem", "position": 3, "name": "SbobetOnline", "item": "https://slot.fedea.com.ar/" },{ "@type": "ListItem", "position": 4, "name": "Casino Online", "item": "https://slot.fedea.com.ar/" },{ "@type": "ListItem", "position": 5, "name": "Togel Online", "item": "https://slot.fedea.com.ar/" },{ "@type": "ListItem", "position": 6, "name": "Daftar Akun MPO MBO99", "item": "https://direct.lc.chat/10239962/" },{ "@type": "ListItem", "position": 7, "name": "Login Akun MPO MBO99", "item": "https://direct.lc.chat/10239962/" },{ "@type": "ListItem", "position": 8, "name": "Live Chat MBO99", "item": "https://secure.livechatinc.com/customer/action/open_chat?license_id=10820522" },{ "@type": "ListItem", "position": 9, "name": "MBO99 News", "item": "https://slot.fedea.com.ar/" },{ "@type": "ListItem", "position": 10, "name": "Versi Desktop", "item": "https://54.255.12.26" },{ "@type": "ListItem", "position": 11, "name": "Download APK", "item": "https://54.255.12.26/APK/MBO99-V2.0.apk" }] } </script>
       <script type="application/ld+json">
         {
           "@context": "https://schema.org",
